--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,18 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>SassyProject</title>
+  <title>SassyAngular2</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <script>
+    var CONFIG = {
+      apiKey: '669353efdb229a737a180fcaceca9c39'
+    };
+  </script>
   <app-root>Loading...</app-root>
 </body>
 </html>
