characters loaded from api

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <script>
     var CONFIG = {
-      apiKey: '669353efdb229a737a180fcaceca9c39'
+      apikey: '669353efdb229a737a180fcaceca9c39'
     };
   </script>
   <app-root>Loading...</app-root>
